# crayon

./: Cargo.toml  bindings.ts  todo.md
app/: Cargo.toml
app/assets/shaders/: lens.wgsl
app/src/: lib.rs  main.rs
app/src/materials/: mod.rs
app/src/materials/lens_material/: lens.wgsl  mod.rs
app/src/plugins/: message_bridge.rs
app/src/preprocess/: mod.rs
app/src/preprocess/shaders/: mod.rs  preprocess.wgsl
app/src/state/: camera.rs
cli/: Cargo.toml
cli/src/: main.rs  typegen.rs
crates/bevy_camera/: Cargo.toml
crates/bevy_camera/src/: pan_orbit_camera.rs
crates/bevy_lens_material/: Cargo.toml
crates/bevy_lens_material/src/preprocess/: mod.rs
crates/bevy_voxel_plugin/: Cargo.toml
crates/bevy_voxel_plugin/src/: lib.rs  lut.rs  util.rs  voxel.rs
crates/bevy_voxel_plugin/src/render/shaders/: default.wgsl  mod.rs
crates/crayon_types/: Cargo.toml
crates/crayon_types/src/: lib.rs
crates/crayon_types/src/events/: mod.rs
crates/crayon_types/src/shape/: mod.rs
crates/dendron_types/: Cargo.toml
crates/dendron_types/src/events/: mod.rs
crates/dendron_types/src/interaction/: mod.rs
crates/dendron_types/src/interaction/cursor/: mod.rs
crates/dendron_types/src/interaction/mode/: mod.rs
crates/dendron_types/src/interaction/tool/: mod.rs
