[workspace]
resolver = "2"
edition = "2021"
members = ["app", "cli", "crates/*"]


[workspace.dependencies]
specta = { git = "https://github.com/oscartbeaumont/specta", features = [
    "typescript",
    "serde",
    "export"
] }
# specta = { version = "1.0.5", features = ["serde", "typescript", "export"]}
bevy = { version = "0.14"}
serde = { version = "1.0.199", features = ["derive"] }
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
crossbeam-channel = "0.5.12"
color-eyre = "0.6.3"
thiserror = "1.0.59"
itertools = "0.13.0"