[package]
name = "crayon_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specta = { workspace = true }
bevy = { workspace = true, features=["file_watcher"] }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
crossbeam-channel = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
crayon_types = { path = "../crates/crayon_types"}
bevy_camera = { path = "../crates/bevy_camera" }
bevy_mod_picking = { workspace = true, features = ["all"] }
