[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.5.4", features = ["derive"]}
thiserror = { workspace = true }
color-eyre = { workspace = true }
dendron_types = { path = "../crates/dendron_types"}
specta = { workspace = true }